Add API for update category's name
