# routes/categories.js
@@ -10,5 +10,5 @@ const {validate} = require("../validates/validate.category")
 router.get("/",auth, categoryController.getCategories)
 router.get("/:categoryId", auth ,validate.getDetailCategory(), categoryController.getCardsInCategory)
 router.post("/", auth, validate.create(), categoryController.createCategory)
-router.patch("/:categoryId",auth, validate.changeName(), categoryController.changeCategoryName)
+router.patch("/:categoryId", auth, validate.changeName(), categoryController.changeCategoryName)
 module.exports = router
